altercao no paragrafo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home" class="principal">
         <div>
             <h1>Olá, eu sou <span>Alencar Pereira</span>.</h1>
-            <p>Olá, sou Alencar Pereira, um desenvolvedor apaixonado por criar soluções digitais que não só funcionam,
+            <p> Sou um desenvolvedor apaixonado por criar soluções digitais que não só funcionam,
                 mas também encantam. Tenho como missão transformar ideias em experiências interativas e acessíveis.
                 Combinando habilidades em HTML, CSS, JavaScript e React.js, trabalho para entregar interfaces intuitivas
                 e soluções inovadoras que superam as expectativas. Estou sempre em busca de novos desafios para expandir
