adicionado mais um projeto

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="card-projeto">
-                <img class="img-projeto efeito-cursor" src="./img/pet.png" alt="foto de uma mulher">
+                <img class="img-projeto efeito-cursor" src="./img/pet.png" alt="foto de uma mulher e um cachorro">
                 <div class="info-projeto">
                     <h3>Projeto Vendas de Carros</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
@@ -70,13 +70,23 @@
             </div>
 
             <div class="card-projeto">
-                <img class="img-projeto efeito-cursor" src="./img/casa.png" alt="image de um celular">
+                <img class="img-projeto efeito-cursor" src="./img/casa.png" alt="localização de ampla cobertura">
                 <div class="info-projeto">
                     <h3>Projeto Vendas de Carros</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
                         aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
                         perspiciatis excepturi aliquid expedita.</p>
                     <a>Ver Projeto →</a>
+                </div>
+            </div>
+            <div class="card-projeto">
+                <img class="img-projeto efeito-cursor" src="./img/easy.png" alt="logo-compras">
+                <div class="info-projeto">
+                    <h3>Projeto Compras Fáceis Via Celular</h3>
+                    <p>O **Easy Shopping Via Mobile** é uma página inicial responsiva que visa oferecer uma experiência
+                        simples e direta de compras móveis. Com um design limpo e moderno, o site é otimizado para
+                        dispositivos móveis, garantindo uma navegação fluida e acessível.</p>
+                    <a href="https://alencarpereira.github.io/easy-shopping/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
         </div>
