adiciondo um projeto conversor de moeda

--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
                     <a href="https://alencarpereira.github.io/easy-shopping/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
+            <div class="card-projeto">
+                <img class="img-projeto efeito-cursor" src="./img/currency.png" alt="logo-currency">
+                <div class="info-projeto">
+                    <h3>Projeto Currency Converter</h3>
+                    <p>O Currency converter é uma ferramenta simples e intuitiva para conversão de moedas em tempo real. O
+                        objetivo do projeto é fornecer uma forma prática para usuários realizarem conversões de
+                        diferentes moedas com base nas taxas de câmbio atualizadas.</p>
+                    <a href="https://alencarpereira.github.io/currency-convert-ale/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
         </div>
     </section>
 
