atualizaçao do link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p>O Currency converter é uma ferramenta simples e intuitiva para conversão de moedas em tempo real. O
                         objetivo do projeto é fornecer uma forma prática para usuários realizarem conversões de
                         diferentes moedas com base nas taxas de câmbio atualizadas.</p>
-                    <a href="https://alencarpereira.github.io/currency-convert-ale/" target="_blank">Ver Projeto →</a>
+                    <a href="https://alencarpereira.github.io/convert-money/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
         </div>
