adicionado novo projeto

--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
             </div>
 
             <div class="card-projeto">
-                <img class="img-projeto efeito-cursor" src="./img/casa.png" alt="localização de ampla cobertura">
+                <img class="img-projeto efeito-cursor" src="./img/marioPortifolio.png" alt="ogo do mario">
                 <div class="info-projeto">
-                    <h3>Projeto Vendas de Carros</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
-                        aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
-                        perspiciatis excepturi aliquid expedita.</p>
-                    <a>Ver Projeto →</a>
+                    <h3>Projeto Mario Bros</h3>
+                    <p>O projeto Mario Bros é um site que oferece serviços de hidráulica, como consertos e manutenção de
+                        encanamentos, usando os personagens Mario e Luigi como tema. A página inclui informações sobre
+                        os serviços, um formulário para solicitação de orçamentos e um link direto para o WhatsApp. O
+                        design é interativo e responsivo, adaptando-se a diferentes dispositivos e proporcionando uma
+                        experiência de usuário agradável.</p>
+                    <a href="https://alencarpereira.github.io/-projeto-mario-bros/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
             <div class="card-projeto">
@@ -93,7 +95,8 @@
                 <img class="img-projeto efeito-cursor" src="./img/currency.png" alt="logo-currency">
                 <div class="info-projeto">
                     <h3>Projeto Currency Converter</h3>
-                    <p>O Currency converter é uma ferramenta simples e intuitiva para conversão de moedas em tempo real. O
+                    <p>O Currency converter é uma ferramenta simples e intuitiva para conversão de moedas em tempo real.
+                        O
                         objetivo do projeto é fornecer uma forma prática para usuários realizarem conversões de
                         diferentes moedas com base nas taxas de câmbio atualizadas.</p>
                     <a href="https://alencarpereira.github.io/convert-money/" target="_blank">Ver Projeto →</a>
@@ -103,7 +106,7 @@
     </section>
 
     <section id="sobre" class="secao">
-        <h2 class="titulo-secao">Sobre Min</h2>
+        <h2 class="titulo-secao">Sobre Mim</h2>
 
         <div class="sobre">
             <img class="img-sobre" src="./img/alencar.jpg" alt="foto de um homem">
