--- a/index.html
+++ b/index.html
@@ -51,25 +51,38 @@
         <h2 class="titulo-secao">Projetos</h2>
 
         <div class="grade-projetos">
+
             <div class="card-projeto">
                 <img class="img-projeto efeito-cursor" src="./img/Projeto carros.png" alt="Projeto carros">
                 <div class="info-projeto">
                     <h3>Projeto Vendas de Carros</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
-                        aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
-                        perspiciatis excepturi aliquid expedita.</p>
+                    <p>Projeto de um slider interativo que apresenta carros de luxo em um catálogo moderno e dinâmico.
+                        Desenvolvido com HTML, CSS e JavaScript puro, permite que o usuário navegue entre os modelos
+                        através de setas laterais ou indicadores visuais, com transições suaves e foco na experiência do
+                        usuário.</p>
                     <a href="https://alencarpereira.github.io/parking-project/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
             <div class="card-projeto">
-                <img class="img-projeto efeito-cursor" src="./img/pet.png" alt="foto de uma mulher e um cachorro">
+                <img class="img-projeto efeito-cursor" src="./img/cafeteria.png" alt="Projeto cafeteria">
                 <div class="info-projeto">
-                    <h3>Projeto PetShop</h3>
+                    <h3>Projeto Cafeteria</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
                         aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
                         perspiciatis excepturi aliquid expedita.</p>
-                    <a>Ver Projeto →</a>
+                    <a href="https://alencarpereira.github.io/projeto-cafeteria/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto efeito-cursor" src="./img/hamburgueria.png" alt="foto de hamburguer">
+                <div class="info-projeto">
+                    <h3>Projeto ForEach-Map-Reduce-Filter</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
+                        aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
+                        perspiciatis excepturi aliquid expedita.</p>
+                    <a href="https://alencarpereira.github.io/dev-burger/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
 
