--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
                 <img class="img-projeto efeito-cursor" src="./img/cafeteria.png" alt="Projeto cafeteria">
                 <div class="info-projeto">
                     <h3>Projeto Cafeteria</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
-                        aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
-                        perspiciatis excepturi aliquid expedita.</p>
+                    <p>Projeto de um site para uma cafeteria moderna, com design responsivo e interativo. Desenvolvido
+                        com HTML, CSS e JavaScript, o site apresenta um layout elegante e funcional, com seções que
+                        incluem o menu de produtos, avaliações dos clientes, e localização. Focado na experiência do
+                        usuário, permite fácil navegação e destaca o ambiente acolhedor e a qualidade do café.</p>
                     <a href="https://alencarpereira.github.io/projeto-cafeteria/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
@@ -79,9 +80,10 @@
                 <img class="img-projeto efeito-cursor" src="./img/hamburgueria.png" alt="foto de hamburguer">
                 <div class="info-projeto">
                     <h3>Projeto ForEach-Map-Reduce-Filter</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil praesentium animi at doloremque
-                        aut ab error explicabo corrupti. Illo corrupti accusantium cum ratione repellat dolorem eius,
-                        perspiciatis excepturi aliquid expedita.</p>
+                    <p>Projeto de um cardápio interativo de lanches, onde é possível exibir todos os itens usando
+                        forEach, aplicar descontos com map, calcular o valor total com reduce e filtrar opções veganas
+                        com filter. Desenvolvido com HTML, CSS e JavaScript, o sistema oferece uma navegação dinâmica e
+                        responsiva para a visualização de preços e detalhes dos produtos.</p>
                     <a href="https://alencarpereira.github.io/dev-burger/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
