--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="card-projeto">
                 <img class="img-projeto efeito-cursor" src="./img/currency.png" alt="logo-currency">
                 <div class="info-projeto">
-                    <h3>Projeto Currency Converter</h3>
+                    <h3>Projeto Conversor de Moeda</h3>
                     <p>O Currency converter é uma ferramenta simples e intuitiva para conversão de moedas em tempo real.
                         O
                         objetivo do projeto é fornecer uma forma prática para usuários realizarem conversões de
