adicionando mais um projeto

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <a href="https://alencarpereira.github.io/-projeto-mario-bros/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
+
             <div class="card-projeto">
                 <img class="img-projeto efeito-cursor" src="./img/easy.png" alt="logo-compras">
                 <div class="info-projeto">
@@ -110,6 +111,7 @@
                     <a href="https://alencarpereira.github.io/easy-shopping/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
+
             <div class="card-projeto">
                 <img class="img-projeto efeito-cursor" src="./img/currency.png" alt="logo-currency">
                 <div class="info-projeto">
@@ -121,7 +123,28 @@
                     <a href="https://alencarpereira.github.io/convert-money/" target="_blank">Ver Projeto →</a>
                 </div>
             </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto efeito-cursor" src="./img/radom.png" alt="foto random">
+                <div class="info-projeto">
+                    <h3>Projeto Random</h3>
+                    <p>Este projeto é uma aplicação simples de sorteio de números, onde o usuário insere dois
+                        valores
+                        (mínimo e máximo) e, ao clicar em um botão, é gerado um número aleatório dentro desse
+                        intervalo. O
+                        resultado é exibido de forma destacada, com uma mensagem personalizada e uma validação para
+                        garantir
+                        que os valores inseridos sejam válidos. O layout é responsivo e visualmente agradável,
+                        utilizando
+                        HTML, CSS e JavaScript para criar uma experiência interativa e dinâmica.</p>
+                    <a href="https://alencarpereira.github.io/projeto-random-2/" target="_blank">Ver Projeto →</a>
+                </div>
+
+            </div>
         </div>
+        </div>
+        </div>
+
     </section>
 
     <section id="sobre" class="secao">
