--- a/index.html
+++ b/index.html
@@ -139,8 +139,22 @@
                         HTML, CSS e JavaScript para criar uma experiência interativa e dinâmica.</p>
                     <a href="https://alencarpereira.github.io/projeto-random-2/" target="_blank">Ver Projeto →</a>
                 </div>
-
             </div>
+
+            <div class="card-projeto">
+                <img class="img-projeto efeito-cursor" src="./img/jokenpo.png" alt="projeto jokenpo">
+                <div class="info-projeto">
+                    <h3>Projeto JokenPô</h3>
+                    <p>O projeto é um jogo interativo de JokenPô (pedra, papel e tesoura) onde o usuário compete contra
+                        uma "máquina" (simulada por escolhas aleatórias). O jogo exibe a pontuação de ambos, permitindo
+                        que o placar seja reiniciado a qualquer momento. Além disso, o projeto inclui um botão para
+                        controlar a reprodução de música, proporcionando uma experiência mais divertida enquanto o jogo
+                        acontece. Desenvolvido com HTML, CSS e JavaScript, o jogo oferece uma interação simples e
+                        dinâmica.</p>
+                    <a href="https://alencarpereira.github.io/segundo-jokenpo/" target="_blank">Ver Projeto →</a>
+                </div>
+            </div>
+
         </div>
         </div>
         </div>
